# anyrunapi

./: .gitignore  README.md  anyrun.py  pyproject.toml
anyrunapi/: __init__.py  api.py  cli.py
tests/: test_anyrunapi.py
